--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -7,9 +8,23 @@ img {
   height: 100px;
 }
 
+.items {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.card {
+  flex-direction: column;
+  width: 200px;
+  display: flex;
+  align-items: center;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
